
####   Don't forget to change the version number in configure.ac!   ####

22 Oct 2005 Fish's (x-n) bit-shifts (ALRF readability enhancement) - Roger Bowler
21 Oct 2005 Move inline functions from esame.c to inline.h - Roger Bowler
20 Oct 2005 Fix extra path separator issue in http_download - Fish
20 Oct 2005 "tasks/xmlrates" == 'cgibin_xml_rates_info()' contributed
            by Tim Pinkawa [timpinkawa@gmail.com] - Fish
20 Oct 2005 cckdutil.c: use LSEEK instead of lseek - Fish
19 Oct 2005 Add OSTAILOR z/OS - Roger Bowler
19 Oct 2005 Don't allow windows paths to confuse shared_ckd_init - Fish
18 Oct 2005 Setting of excarid for ASTE-instance exception (Fish) - Roger Bowler
15 Oct 2005 Fix panel color - Jay & Greg Smith
15 Oct 2005 Fix ASTE instance number handling in PC - Jan Jaeger
12 Oct 2005 cckd: gcol moves l2 tables to the front - Greg Smith
12 Oct 2005 cckd_comp improvements - Greg Smith
11 Oct 2005 Minor change in CU14, thanks Roger - Bernard van der Helm
10 Oct 2005 MIDAW list must not cross a page boundary - Roger Bowler
10 Oct 2005 IDTE instruction is RRF_RM format with unused M4 operand - Roger Bowler
07 Oct 2005 Display SIGP order number in addition to description - Roger Bowler
06 Oct 2005 Store Facility List Extended (STFLE) - Roger Bowler
06 Oct 2005 Implemented ETF2 enhancements, still having the flu - Bernard van der Helm
06 Oct 2005 Implemented ETF3 and crypto while having the flu - Bernard van der Helm
05 Oct 2005 Fix segfault in HSCH if device is startpending - Greg
05 Oct 2005 Activate FEATURE_EXTENDED_IMMEDIATE - Roger Bowler
05 Oct 2005 Corrections to FLOGR instruction - Roger Bowler
05 Oct 2005 MIDAW corrections - Roger Bowler
04 Oct 2005 merge FEATURE_LOAD_ADDITIONAL into FEATURE_EXTENDED_IMMEDIATE - Roger Bowler
04 Oct 2005 rename FEATURE_LOAD_PAGE_TABLE_ENTRY_ADDRESS as FEATURE_DAT_ENHANCEMENT_FACILITY_2 - Roger Bowler
04 Oct 2005 rename FEATURE_BRANCH_DETECTION as FEATURE_PER3 - Roger Bowler